--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,7 @@
 {
     "version": 2,
-    "public": true,
-    "builds": [
-      {
-        "src": "index.html",
-        "use": "@vercel/static"
-      }
-    ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html",
-        "status": 200
-      }
+      { "src": "/(.*)", "dest": "/server.js" }
     ]
   }
   
